[package]
name = "zenoh-protobuf-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = {git = "https://github.com/eclipse-zenoh/zenoh"}
async-std = { version = "=1.11.0", default-features = false, features = [
	"attributes",
] }
prost = "0.10"
bytes = "1.1"
clap = "2.33.3"
env_logger = "0.9.0"
futures = "0.3.12"
git-version = "0.3.4"
json5 = "0.4.1"
log = "0.4"

[build-dependencies]
prost-build = "0.10"

[[example]]
name = "z_sub"
path = "examples/z_sub.rs"

[[example]]
name = "z_put"
path = "examples/z_put.rs"
